@@ -445,11 +445,6 @@ export(frankv)
 export(fre)
 export(fread)
 export(from)
-export(from_text)
-export(from_text_csv)
-export(from_text_csv2)
-export(from_text_tab)
-export(from_text_tab2)
 export(fsetdiff)
 export(fsetequal)
 export(fsort)
@@ -651,6 +646,11 @@ export(tab_total_row_position)
 export(tab_total_statistic)
 export(tab_transpose)
 export(tab_weight)
+export(text_to_columns)
+export(text_to_columns_csv)
+export(text_to_columns_csv2)
+export(text_to_columns_tab)
+export(text_to_columns_tab2)
 export(thru)
 export(to)
 export(total)
