@@ -1,26 +1,26 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/from_text.R
-\name{from_text}
-\alias{from_text}
-\alias{from_text_csv}
-\alias{from_text_csv2}
-\alias{from_text_tab}
-\alias{from_text_tab2}
+% Please edit documentation in R/text_to_columns.R
+\name{text_to_columns}
+\alias{text_to_columns}
+\alias{text_to_columns_csv}
+\alias{text_to_columns_csv2}
+\alias{text_to_columns_tab}
+\alias{text_to_columns_tab2}
 \title{Make data.frame from text}
 \usage{
-from_text(text, header = TRUE, sep = "", quote = "", dec = ".",
-  encoding = "unknown", ...)
-
-from_text_csv(text, header = TRUE, sep = ",", quote = "",
+text_to_columns(text, header = TRUE, sep = "", quote = "",
   dec = ".", encoding = "unknown", ...)
 
-from_text_csv2(text, header = TRUE, sep = ";", quote = "",
+text_to_columns_csv(text, header = TRUE, sep = ",", quote = "",
+  dec = ".", encoding = "unknown", ...)
+
+text_to_columns_csv2(text, header = TRUE, sep = ";", quote = "",
   dec = ",", encoding = "unknown", ...)
 
-from_text_tab(text, header = TRUE, sep = "\\t", quote = "",
+text_to_columns_tab(text, header = TRUE, sep = "\\t", quote = "",
   dec = ".", encoding = "unknown", ...)
 
-from_text_tab2(text, header = TRUE, sep = "\\t", quote = "",
+text_to_columns_tab2(text, header = TRUE, sep = "\\t", quote = "",
   dec = ",", encoding = "unknown", ...)
 }
 \arguments{
@@ -30,7 +30,7 @@ from_text_tab2(text, header = TRUE, sep = "\\t", quote = "",
 names of the variables as its first line.}
 
 \item{sep}{the field separator character. Values on each line of the file are
-separated by this character. If sep = "" (the default for read.table) the
+separated by this character. If sep = "" (the default for \code{text_to_columns}) the
 separator is 'white space', that is one or more spaces, tabs, newlines or
 carriage returns.}
 
@@ -52,7 +52,7 @@ trailing whitespaces are trimmed. You can use comments with '#' inside your text
 For details see \link[utils]{read.table}.
 }
 \examples{
-from_text("
+text_to_columns("
 # simple data.frame 
      a b   c
      1 2.5 a
